k8s/cd/service/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
      app.kubernetes.io/instance: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lldap
        app.kubernetes.io/instance: lldap
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: lldap
          image: ghcr.io/lldap/lldap:v0.6.3-alpine-rootless
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: config
              mountPath: /data/lldap_config.toml
              subPath: lldap_config.toml
              readOnly: true
            - name: run
              mountPath: /run/lldap
            - name: certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: lldap-config
        - name: run
          emptyDir: {}
        - name: certs
          secret:
            secretName: cluster-db-lldap
