k8s/cd/service/lldap/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
      name: gateway
  hostnames:
    - lldap.k8s.nevi.network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lldap
          port: 17170
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
